styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html, body {
    height: 100%;
    overflow-x: hidden;
}

body {
    background-color: #0B132C;
    color: #729FCF;
    font-family: sans-serif;
}

/* Hero section */
.hero {
    align-items: center;
    box-sizing: border-box;
    display: flex;
    gap: 20px;
    height: 100vh;
    justify-content: center;
    padding: 0 10px;
}

.hero img {
    height: auto;
    max-width: 45%;
}

.hero > div {
    width: 50%;
}

.hero h1 {
    color: #F0F0F0;
    font-size: 5em;
    text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.7);
}

.hero p {
    margin-bottom: 20px;
}

/* Buttons */
.buttons {
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
}

.buttons button {
    background-color: transparent;
    border: 2px solid #729FCF;
    color: #729FCF;
    cursor: pointer;
    font-size: 18px;
    padding: 15px 25px;
    transition: background-color 0.3s ease, color 0.3s ease;
    white-space: nowrap;
}

.buttons button.download {
    background-color: #729FCF;
    color: #0B132C;
    font-weight: bold;
    position: relative;
}

.buttons button:hover {
    background-color: #729FCF;
    color: #F0F0F0;
}

.download::after {
    color: lightslategrey;
    content: '44.2 Megabytes';
    left: 0;
    opacity: 0;
    pointer-events: none;
    position: absolute;
    transition: opacity 400ms;
    bottom: -26px;
}

.download:hover::after {
    opacity: 1.0;
}

/* Installation guide */
.installation-guide {
    align-items: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 20px;
    width: 100%;
}

.installation-guide h2 {
    font-size: 2em;
    margin-bottom: 20px;
}

.options {
    display: flex;
    gap: 50px;
    justify-content: center;
    max-width: 1500px;
    width: 90%;
}

.option {
    background-color: #1C2331;
    border-radius: 5px;
    color: #F0F0F0;
    padding: 20px;
    width: 45%;
}

.option h3 {
    font-size: 24px;
    margin-bottom: 20px;
}

.option h4 {
    color: #FF7F50;
    font-size: 20px;
    margin-bottom: 10px;
    margin-top: 20px;
}

.option li {
    margin-bottom: 20px;
    list-style: none;
}

.option p {
    color: #F0F0F0;
    font-size: 18px;
    letter-spacing: 0.05em;
    line-height: 1.6;
    margin-bottom: 10px;
}

.option img {
    height: auto;
    width: 100%;
}

.option p img {
    margin-right: 5px;
}

#memory-settings li div {
    display: inline-block;
    width: 80px;
}

a:link {
    color: #FF7F50;
}

a:visited {
    color: #4873A6;
}

/* Footer */
footer {
    align-items: center;
    background-color: var(--secondary-bg-color);
    color: var(--secondary-txt-color);
    display: flex;
    justify-content: space-between;
    padding: 10px 20px;
}

.copyright {
    text-align: left;
}

.ai-credit {
    text-align: right;
}

/* More info section */
section.more-info {
    margin-top: 15vh;
}

.more-info {
    padding: 20px;
    text-align: center;
}

.more-info h2 {
    font-size: 2.5em;
    margin-bottom: 20px;
}

.more-info p {
    letter-spacing: 0.05em;
    line-height: 1.5em;
}

.more-info-content {
    align-items: center;
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    justify-content: space-around;
    text-align: left;
}

.more-info-content div {
    width: 45%;
}

.more-info-content h3 {
    color: #FF7F50;
    font-size: 1.5em;
    margin-bottom: 10px;
}

.more-info-content p {
    color: #F0F0F0;
    font-size: 1em;
    margin-bottom: 30px;
}

/* Safety note section */
#safety-note {
    color: #F0F0F0;
    padding: 20px;
}

#safety-note h2 {
    color: #729FCF;
    font-size: 2em;
    margin-bottom: 20px;
    text-align: center;
}

#safety-note .section-content {
    color: #F0F0F0;
    text-align: center;
}

/* Image pane */
.image-pane {
    overflow: hidden;
    padding-top: 27.125%; /* This value gives a 16:9 aspect ratio. */
    position: relative;
    width: 50%; 
    flex-grow: 1;
}

.image-pane img {
    height: 100%;
    left: 0;
    object-fit: cover;
    position: absolute;
    top: 0;
    width: 100%;
}

#gallery-image {
    transition: opacity 500ms ease-in-out;
}

.carousel-control {
    align-items: center;
    background-color: transparent;
    border: 1px solid rgba(255,255,255,0.3);
    border-radius: 50px;
    bottom: 5%;
    color: rgba(255,255,255,0.3);
    cursor: pointer;
    display: flex;
    font-size: 1.5em;
    height: 40px;
    justify-content: center;
    opacity: 0;
    position: absolute;
    transition: opacity 200ms ease-in;
    width: 40px;
}

#prev {
    left: 10px;
}

#next {
    right: 10px;
}

.image-pane:hover .carousel-control {
    opacity: 1;
}

/* Responsive styles */
@media (max-width: 1108px) {
    .options, .more-info-content {
        flex-direction: column;
    }

    .option, .more-info-content div {
        margin-bottom: 20px;
        width: 100%;
    }
}

@media (max-width: 800px) {
    .hero {
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }

    .hero img, .hero div {
        width: 100%;
        max-width: 100%;
        height: 50%;
    }

    .buttons {
        justify-content: center;
        align-items: flex-start;
    }

    .buttons button {
        height: auto; /* Allow the button to auto-adjust its height */
    }
}

